Fix the bug that css opacity dosen't work on ios.

--- a/fullscreen-scroll/fullscreen-scroll.css
+++ b/fullscreen-scroll/fullscreen-scroll.css
@@ -45,11 +45,13 @@ body{
     top:50%;
     margin:0 40px;
     opacity:0;
+    visibility:visible;
     transform:translateY(-50%);
     transition:all 3s ease;
 }
 .text-container.in-sight{
     opacity:1;
+    visibility:visible;
 }
 .text-container h2{
     font-size:6vh;
